--- a/app/src/main/res/layout/activity_esaldizuzenaaukeratu_6.xml
+++ b/app/src/main/res/layout/activity_esaldizuzenaaukeratu_6.xml
@@ -30,7 +30,7 @@
         android:layout_marginEnd="305dp"
         android:layout_marginBottom="178dp"
         android:text="@string/aukera"
-        android:textSize="25dp"
+        android:textSize="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -40,17 +40,20 @@
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="266dp"
-        android:layout_height="34dp"
-
+        android:layout_width="504dp"
+        android:layout_height="57dp"
         android:layout_marginStart="14dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="312dp"
         android:layout_marginBottom="139dp"
+        android:spinnerMode="dialog"
+        android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.38" />
 
 </android.support.constraint.ConstraintLayout>
 
