--- a/app/src/main/res/layout/activity_argazkiaaztertu_7.xml
+++ b/app/src/main/res/layout/activity_argazkiaaztertu_7.xml
@@ -6,4 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".Argazkiaaztertu_7">
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="63dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="134dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="187dp"
+        android:text="Zirgarriak"
+        app:layout_constraintBottom_toTopOf="@+id/imageView8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="match_parent"
+        android:layout_height="233dp"
+        android:layout_marginBottom="227dp"
+        android:src="@drawable/zirgarriak"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
 </android.support.constraint.ConstraintLayout>
