--- a/app/src/main/res/layout/activity_argazkiakordenatu_14.xml
+++ b/app/src/main/res/layout/activity_argazkiakordenatu_14.xml
@@ -42,18 +42,18 @@
         android:id="@+id/argazki3"
         android:layout_width="150dp"
         android:layout_height="97dp"
-        android:layout_marginStart="8dp"
 
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:src="@drawable/argazki_14_3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.727"
-        app:layout_constraintStart_toEndOf="@+id/argazki4"
+        app:layout_constraintBottom_toTopOf="@+id/testua3"
+        app:layout_constraintEnd_toStartOf="@+id/argazki4"
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintStart_toEndOf="@+id/argazki2"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.054" />
+        app:layout_constraintVertical_bias="0.853" />
 
     <ImageView
         android:id="@+id/argazki4"
@@ -66,73 +66,73 @@
         android:src="@drawable/argazki_14_4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.656"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.189" />
 
-    <TextView
+    <ImageView
         android:id="@+id/testua1"
         android:layout_width="132dp"
         android:layout_height="61dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="96dp"
+        android:layout_marginBottom="68dp"
         android:contentDescription="testua1"
+        android:src="@drawable/testu1"
 
-        android:text="@string/testua1"
-        android:textSize="10sp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.021"
+        app:layout_constraintHorizontal_bias="0.018"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
+    <ImageView
         android:id="@+id/testua2"
         android:layout_width="117dp"
         android:layout_height="73dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="92dp"
+        android:layout_marginBottom="68dp"
         android:contentDescription="testua2"
+        android:src="@drawable/testu2"
 
-        android:text="@string/testua2"
-        android:textSize="10sp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.357"
+        app:layout_constraintHorizontal_bias="0.337"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
+    <ImageView
         android:id="@+id/testua3"
         android:layout_width="117dp"
         android:layout_height="97dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="68dp"
+        android:layout_marginBottom="60dp"
         android:contentDescription="testua3"
+        android:src="@drawable/testu3"
 
-        android:text="@string/testua3"
-        android:textSize="10sp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.649"
+        app:layout_constraintHorizontal_bias="0.638"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
+    <ImageView
         android:id="@+id/testua4"
         android:layout_width="117dp"
         android:layout_height="58dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="68dp"
+        android:layout_marginBottom="80dp"
         android:contentDescription="testua4"
+        android:src="@drawable/testu4"
 
-        android:text="@string/testua4"
-        android:textSize="10sp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.934"
+        app:layout_constraintHorizontal_bias="0.958"
         app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
