--- a/app/src/main/res/layout/activity_egiagezurra_20.xml
+++ b/app/src/main/res/layout/activity_egiagezurra_20.xml
@@ -1,9 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Egiagezurra_20">
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/egia_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="91dp"
+        android:layout_marginEnd="152dp"
+        android:text="Egia" />
+
+    <Button
+        android:id="@+id/egia_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="144dp"
+        android:layout_marginEnd="149dp"
+        android:text="Egia" />
+
+    <Button
+        android:id="@+id/egia_4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="208dp"
+        android:layout_marginEnd="147dp"
+        android:text="Egia" />
+
+    <TextView
+        android:id="@+id/galdera1"
+        android:layout_width="257dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/galdera2"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="39dp"
+        android:text="@string/galdera1"
+        tools:layout_editor_absoluteX="59dp"
+        tools:layout_editor_absoluteY="69dp" />
+
+    <TextView
+        android:id="@+id/galdera2"
+        android:layout_width="257dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/galdera3"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="92dp"
+        android:text="@string/galdera2"
+        tools:layout_editor_absoluteX="59dp"
+        tools:layout_editor_absoluteY="113dp" />
+
+    <TextView
+        android:id="@+id/galdera3"
+        android:layout_width="258dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="29dp"
+        android:layout_marginBottom="122dp"
+        android:text="@string/galdera3"
+        tools:layout_editor_absoluteX="59dp"
+        tools:layout_editor_absoluteY="158dp" />
+
+    <TextView
+        android:id="@+id/galdera4"
+        android:layout_width="256dp"
+        android:layout_height="58dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="55dp"
+        android:text="@string/galdera4"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="221dp" />
+
+    <Button
+        android:id="@+id/egia_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="31dp"
+        android:layout_marginEnd="153dp"
+        android:text="Egia" />
+
+    <Button
+        android:id="@+id/gezurra_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="49dp"
+        android:text="Gezurra" />
+
+    <Button
+        android:id="@+id/gezurra_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="91dp"
+        android:layout_marginEnd="49dp"
+        android:text="Gezurra" />
+
+    <Button
+        android:id="@+id/gezurra_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="49dp"
+        android:text="Gezurra" />
+
+    <Button
+        android:id="@+id/gezurra_4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="210dp"
+        android:layout_marginEnd="46dp"
+        android:text="Gezurra" />
+
+</RelativeLayout>
