--- a/app/src/main/res/layout/activity_details_list.xml
+++ b/app/src/main/res/layout/activity_details_list.xml
@@ -7,7 +7,24 @@
     android:layout_height="match_parent"
     tools:context=".details_list">
 
-    <ListView
+    <GridView
+        android:id="@+id/gridView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:clickable="true"
+        android:columnWidth="400dp"
+        android:drawSelectorOnTop="true"
+        android:focusable="true"
+        android:gravity="center"
+        android:numColumns="auto_fit"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="5dp"
+        tools:layout_editor_absoluteX="5dp" />
+
+    <!--<ListView
         android:id="@+id/paradas_lista_juegos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,7 +32,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:visibility="invisible"/>
+        android:visibility="invisible"/>-->
 
     <!--<ImageButton
         android:id="@+id/btnNext"
