--- a/app/src/main/res/layout/activity_egiagezurra_20.xml
+++ b/app/src/main/res/layout/activity_egiagezurra_20.xml
@@ -1,136 +1,171 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Egiagezurra_20">
 
-    <Button
-        android:id="@+id/egia_2"
+    <TextView
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="91dp"
-        android:layout_marginEnd="152dp"
-        android:text="Egia" />
+        android:layout_marginStart="151dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="151dp"
+        android:fontFamily="@font/josefin_slab_bold"
+        android:text="1914 eta 1928an eraikina berritu eta barroko estiloa hartu zuen."
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/egia_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="144dp"
-        android:layout_marginEnd="149dp"
-        android:text="Egia" />
+        android:id="@+id/respuesta1"
+        android:layout_width="155dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="4dp"
+        android:fontFamily="@font/josefin_slab_bold"
+        android:text="Egia"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <Button
-        android:id="@+id/egia_4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="208dp"
-        android:layout_marginEnd="147dp"
-        android:text="Egia" />
+        android:id="@+id/respuesta2"
+        android:layout_width="155dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="12dp"
+        android:fontFamily="@font/josefin_slab_bold"
+        android:text="Gezurra"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
-        android:id="@+id/galdera1"
-        android:layout_width="257dp"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/galdera2"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="39dp"
-        android:text="@string/galdera1"
-        tools:layout_editor_absoluteX="59dp"
-        tools:layout_editor_absoluteY="69dp" />
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginTop="15dp"
+        android:fontFamily="@font/josefin_slab_bold"
+        android:text="Cisco II. eta Cisco III. ez ziren eraikin honetan oinarritu."
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/respuesta1" />
+
+    <Button
+        android:id="@+id/respuesta3"
+        android:layout_width="155dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="4dp"
+        android:fontFamily="@font/josefin_slab_bold"
+        android:text="Egia"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+    <Button
+        android:id="@+id/respuesta4"
+        android:layout_width="155dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="12dp"
+        android:fontFamily="@font/josefin_slab_bold"
+        android:text="Gezurra"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
-        android:id="@+id/galdera2"
-        android:layout_width="257dp"
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/galdera3"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="92dp"
-        android:text="@string/galdera2"
-        tools:layout_editor_absoluteX="59dp"
-        tools:layout_editor_absoluteY="113dp" />
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/josefin_slab_bold"
+        android:text="Luis Arana Urigüen enpresaburu, politikari kontserbadorea eta kirolari bilbotarrak eskatuta eraiki zuten. "
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/respuesta6" />
+
+    <Button
+        android:id="@+id/respuesta5"
+        android:layout_width="155dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="4dp"
+        android:fontFamily="@font/josefin_slab_bold"
+        android:text="Egia"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+    <Button
+        android:id="@+id/respuesta6"
+        android:layout_width="155dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="12dp"
+        android:fontFamily="@font/josefin_slab_bold"
+        android:text="Gezurra"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
-        android:id="@+id/galdera3"
-        android:layout_width="258dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="29dp"
-        android:layout_marginBottom="122dp"
-        android:text="@string/galdera3"
-        tools:layout_editor_absoluteX="59dp"
-        tools:layout_editor_absoluteY="158dp" />
-
-    <TextView
-        android:id="@+id/galdera4"
-        android:layout_width="256dp"
-        android:layout_height="58dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginBottom="55dp"
-        android:text="@string/galdera4"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="221dp" />
+        android:id="@+id/textView9"
+        android:layout_width="377dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/josefin_slab_bold"
+        android:text="Ariatza eraikina dagoen finka norentzat izan zen? "
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/respuesta4" />
 
     <Button
-        android:id="@+id/egia_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="31dp"
-        android:layout_marginEnd="153dp"
-        android:text="Egia" />
+        android:id="@+id/respuesta7"
+        android:layout_width="155dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="4dp"
+        android:fontFamily="@font/josefin_slab_bold"
+        android:text="Egia"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <Button
-        android:id="@+id/gezurra_1"
+        android:id="@+id/respuesta8"
+        android:layout_width="155dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="12dp"
+        android:fontFamily="@font/josefin_slab_bold"
+        android:text="Gezurra"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btnPreviousGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="49dp"
-        android:text="Gezurra" />
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        android:clickable="true"
+        app:backgroundTint="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/imgprev" />
 
-    <Button
-        android:id="@+id/gezurra_2"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btnNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="91dp"
-        android:layout_marginEnd="49dp"
-        android:text="Gezurra" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:clickable="true"
+        app:backgroundTint="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/imgnext" />
 
-    <Button
-        android:id="@+id/gezurra_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="150dp"
-        android:layout_marginEnd="49dp"
-        android:text="Gezurra" />
-
-    <Button
-        android:id="@+id/gezurra_4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="210dp"
-        android:layout_marginEnd="46dp"
-        android:text="Gezurra" />
-
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
