--- a/app/src/main/res/layout/activity_argazkiakordenatu_14.xml
+++ b/app/src/main/res/layout/activity_argazkiakordenatu_14.xml
@@ -44,16 +44,15 @@
         android:layout_height="97dp"
 
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="44dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="49dp"
         android:src="@drawable/argazki_14_3"
-        app:layout_constraintBottom_toTopOf="@+id/testua3"
+        app:layout_constraintBottom_toTopOf="@+id/testua2"
         app:layout_constraintEnd_toStartOf="@+id/argazki4"
-        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/argazki2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.622" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/argazki4"
